fixed text wrap bug

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
   background: linear-gradient(
     90deg,
-    #f6cfbe 0%,
+    #0f50b1 0%,
     #b9dcf2 100%
   );
 }
@@ -86,6 +86,7 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  text-align: left;
   margin: 4px auto;
   color: black;
   background: linear-gradient(
@@ -93,7 +94,7 @@ h1 {
     #f4f269 0%,
     #5cb270 100%
   );
-
+ 
   padding: 16px;
   border-radius: 5px;
   width: 90%;
@@ -105,6 +106,10 @@ h1 {
     #ffcb6b 0%,
     #3d8bff 100%
   );
+}
+
+.textbox {
+  word-break: break-all;
 }
 
 .icons {
